--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "codecov": "^3.8.1",
     "eslint": "^7.18.0",
     "flat": "^5.0.2",
-    "jest": "^26.6.3",
-    "microbundle": "^0.13.0",
+    "jest": "^29.7.0",
+    "microbundle": "0.15.1",
     "obj-unflatten": "^1.0.10",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^29.3.1",
     "typescript": "^4.1.3"
   }
 }
